--- a/gb/20/1/16/n11797632.md
+++ b/gb/20/1/16/n11797632.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/qdbzyr225/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qdbzyr225/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>宋善：庆贺三亿五千万人退党</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2019/07/1a3d3cd159d8803d25b6082ccbdc43aa-600x400.jpg" />
-<h6>2019年7月15日，全球退党服务中心负责人易蓉女士在纪念720反迫害20周年纽约中领馆前的集会上发言。 (戴兵/大纪元)
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/1a3d3cd159d8803d25b6082ccbdc43aa-600x400.jpg" />
+<h6>2019年7月15日，全球退党服务中心负责人易蓉女士在纪念720反迫害20周年纽约中领馆前的集会上发言。（戴兵／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年01月16日讯】据媒体报导，在<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md">退党</a>网站公开表明“三退”（即退出中国共产党、共青团和少先队）的人数已达三亿五千万。唾弃中共已然成为中国社会的主流民意，一个崭新的时代已经来临。</p>
-<h2>《<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md">九评</a>共产党》引发<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md">退党</a>潮</h2>
-<p>二零零四年底《<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md">九评</a>共产党》一书，彻底揭露中共的邪恶本质，由此引发全球华人的退党大潮，澎湃难挡。十五年来，大量的中国民众将退党声明张贴在公共场所，“天灭中共”、“退党保平安”、“退党得福报”等标语随处可见，传递佳音的人越来越多，更多人因退出中共而受益。</p>
-<p>中共<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E4%BC%AA%E6%94%BF%E6%9D%83.md">伪政权</a>历七十载，充满斗争、仇恨、屠杀、战乱、谎言和恐惧，欠下了八千万条人命的血债。许多人过去对共产党认识模糊或心存幻想，看了《九评》后，才认清了中共是古今中外最邪恶的政治<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E6%B5%81%E6%B0%93%E9%9B%86%E5%9B%A2.md">流氓集团</a>：反人性、反自然，杀人如麻、专制独裁，破坏民族文化、暴力恐怖统治，尤以二十年来残酷迫害修炼“真、善、忍”的法轮功学员为最。</p>
+<p>【大纪元2020年01月16日讯】据媒体报导，在<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>网站公开表明“三退”（即退出中国共产党、共青团和少先队）的人数即将达到三亿五千万。唾弃中共已然成为中国社会的主流民意，一个崭新的时代已经来临。</p>
+<h2>《<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>共产党》引发<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>潮</h2>
+<p>二零零四年底《<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>共产党》一书，彻底揭露中共的邪恶本质，由此引发全球华人的退党大潮，澎湃难挡。十五年来，大量的中国民众将退党声明张贴在公共场所，“天灭中共”、“退党保平安”、“退党得福报”等标语随处可见，传递佳音的人越来越多，更多人因退出中共而受益。</p>
+<p>中共<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BC%AA%E6%94%BF%E6%9D%83.md#1">伪政权</a>历七十载，充满斗争、仇恨、屠杀、战乱、谎言和恐惧，欠下了八千万条人命的血债。许多人过去对共产党认识模糊或心存幻想，看了《九评》后，才认清了中共是古今中外最邪恶的政治<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B5%81%E6%B0%93%E9%9B%86%E5%9B%A2.md#1">流氓集团</a>：反人性、反自然，杀人如麻、专制独裁，破坏民族文化、暴力恐怖统治，尤以二十年来残酷迫害修炼“真、善、忍”的法轮功学员为最。</p>
 <h2>迫害法轮功 天要灭中共</h2>
 <p>自一九九九年江氏集团与中共镇压法轮功，非法抓捕法轮功学员，关入劳教所、监狱和洗脑班，迄今至少有四千三百多名法轮功学员被迫害致死，中原大地，处处腥风血雨。二零零六年三月媒体揭露了中共大规模活体摘取法轮功学员器官、贩售牟利并焚尸灭迹，更是人神共愤、天理难容，被称为“这个星球上前所未有的罪恶”。</p>
 <p>中共不等于中国，中共泯灭人性的党文化与中国敬天信神的传统文化格格不入。纵观古今中外，“暴政必亡”是颠扑不破的真理。《九评共产党》书里曾提出“天灭中共”，其意指中共是危害全人类的邪灵恶党，人类要坚守良知善念，顺应天意，神佛就会帮助世人清除红魔。</p>
-<p>二零零二年六月，贵州省平塘县惊现<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E8%97%8F%E5%AD%97%E7%9F%B3.md">藏字石</a>，“中国共产党亡”六字位于距今2.7亿年的二叠统栖霞组深灰色岩中，没有人工雕凿及人为加工痕迹。这正是上苍明示：天要灭中共。随着“三退”人数如滚雪球般的持续扩大，“天灭中共”已是历史的必然。从一般党、团员到政界、军队高层干部，更有驻外的中国领事馆官员家属以公开退党方式表达唾弃暴政，印证了天意不可违，更是民心思变的写照。</p>
+<p>二零零二年六月，贵州省平塘县惊现<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%97%8F%E5%AD%97%E7%9F%B3.md#1">藏字石</a>，“中国共产党亡”六字位于距今2.7亿年的二叠统栖霞组深灰色岩中，没有人工雕凿及人为加工痕迹。这正是上苍明示：天要灭中共。随着“三退”人数如滚雪球般的持续扩大，“天灭中共”已是历史的必然。从一般党、团员到政界、军队高层干部，更有驻外的中国领事馆官员家属以公开退党方式表达唾弃暴政，印证了天意不可违，更是民心思变的写照。</p>
 <h2>“三退”除邪灵 平安得福报</h2>
 <p>在中国，很多人当年加入少先队、共青团或共产党，并不是真心诚意想参加，但不管是主动或被动，只要是参加过共产党的组织，就在灵魂深处打上了红魔的烙印，所以退出中共及相关组织就是救赎自身的灵魂，使生命远离罪恶，在共产党解体灭亡时，已退党的人不再与共产党共同承担责任，免受牵连。</p>
 <p>随着中共长期灌输“无神论”邪说，现在许多中国人不相信神佛的存在，鄙视“三尺头上有神灵”为迷信，不理解为何“三退”后能得福报。其实，“三退”就解除了当年加入党、团、队时所发过的毒誓，不再归中共邪灵管了，改归神佛管。“三退”后的人因此万事顺、福报多。</p>
@@ -34,41 +34,45 @@
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/16/n11797632.htm">宋善：庆贺三亿五千万人退党</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11792692.htm">国民党惨败 专家：因不再反共</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11789322.htm">每日三退声明精选（2020/01/12）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/7/n11773529.htm">【拍案惊奇】什么是左胶？对社会有何影响</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11768270.htm">隋志：善恶有报是天理 只论来早与来迟</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11768110.htm">洪达：拒绝中共 维护普世价值</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11754554.htm">新元赋——退党中心2020新年寄语</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/4/5/n10278443.htm">退党大潮冲击波：中共恐慌 全球各界声援</a></li>
-> <li><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11791752.md">每日三退声明精选（2020/01/13）</a></li>
-> <li><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/12/n11787878.md">年末岁首 中国人明真相远离中共</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11795863.htm">【新闻看点】川刘大阵势签协议 北京被逼上架</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11794919.htm">伊朗国营电视台主播辞职：原谅我说谎13年</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11795625.htm">【更新】美中签署历史性第一阶段贸易协议</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11796241.htm">伊朗在变天 中共或失去打击美国的王牌</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776359.htm">简化汉字“圣”包藏什么祸心？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11760836.htm">他将前世今生的爱 又带到了妻子的来世</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/4/24/n7677815.htm">家有贤妻  福荫陶门几代人！</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11777539.htm">“蓝出于青”的幽默才子纪晓岚</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793300.htm">【新闻看点】中美初阶段贸协曝光 北京大让步</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793546.htm">港男纪律部队坠楼过程被录 评论：老天有眼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791100.htm">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11793882.htm">【拍案惊奇】美击杀模式曝光 对伊战略适用中俄</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11795863.htm">【新闻看点】川刘大阵势签协议 北京被逼上架</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11796541.htm">【拍案惊奇】首阶段贸易协议 中美各让步什么？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791054.htm">大陆名嘴朱丹：口误让我的主持生涯彻底毁灭</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11794403.htm">澎恰恰重摔致髋骨错位 坐轮椅录影吓坏众人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788549.htm">田蕊妮不再续约无线 杜汶泽笑言：替TVB难过</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11791826.htm">网民：看了这段短片就知道伊朗“不可怕”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791209.htm">传翟天临拟复出 汪涵：盗窃学术成果令人不齿</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/14/n11792692.md#1">国民党惨败 专家：因不再反共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/13/n11789322.md#1">每日三退声明精选（2020/01/12）</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/7/n11773529.md#1">【拍案惊奇】什么是左胶？对社会有何影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/4/n11768270.md#1">隋志：善恶有报是天理 只论来早与来迟</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/4/n11768110.md#1">洪达：拒绝中共 维护普世价值</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/4/5/n10278443.md#1">退党大潮冲击波：中共恐慌 全球各界声援</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qdbzyr225/djy/blob/master/gb/20/1/16/n11797632.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qdbzyr225/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qdbzyr225/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qdbzyr225/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262985.md#1" target="_blank">一份传单圆梦 罗马青年吁中国人脱离暴政</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/16/n11797632.htm">宋善：庆贺三亿五千万人退党</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/1/16/n11797632.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
